--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "deprecated-react-native-prop-types": "^4.2.1",
     "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
