--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native": "0.72.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-modal": "^13.0.1"
+    "react-native-modal": "^13.0.1",
+    "react-native-razorpay": "^2.3.0",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
