--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "deprecated-react-native-prop-types": "^4.2.1",
     "expo": "~49.0.7",
     "expo-font": "^11.4.0",
+    "expo-sqlite": "^11.3.2",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal": "^13.0.1",
-    "react-native-razorpay": "^2.3.0",
-    "lottie-react-native": "5.1.6"
+    "react-native-razorpay": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
